--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next-i18next": "^15.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-i18next": "^15.7.2"
+    "react-i18next": "^15.7.2",
+    "sass": "^1.90.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
