--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "i18next": "^25.4.2",
     "next": "15.5.0",
-    "next-i18next": "^15.4.2",
+    "next-intl": "^4.3.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-i18next": "^15.7.2",
     "sass": "^1.90.0"
   },
   "devDependencies": {
