--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next-intl": "^4.3.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "sass": "^1.90.0"
+    "sass": "^1.90.0",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
