--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.542.0",
     "next": "15.5.0",
     "next-intl": "^4.3.5",
     "react": "19.1.0",
